# tsduck

./: CMakeLists.txt  CMakePresets.json  README.md  project.cmake
include/tsduck/: PidProvider.cpp  PidProvider.h  PipeTsPacketSource.cpp  PipeTsPacketSource.h  ServiceIdProvider.cpp  ServiceIdProvider.h  TSDumper.cpp  TSDumper.h  TableOperator.cpp  TableOperator.h  TestProgramMux.h  TsDuckToString.cpp  TsDuckToString.h
include/tsduck/changer/: AutoPidChanger.cpp  AutoPidChanger.h  AutoServiceIdChanger.cpp  AutoServiceIdChanger.h
include/tsduck/container/: TSPacketQueue.cpp  TSPacketQueue.h
include/tsduck/corrector/: CCCorrector.cpp  CCCorrector.h  TSOutputCorrector.cpp  TSOutputCorrector.h  TableRepeater.cpp  TableRepeater.h
include/tsduck/handler/: TableHandler.cpp  TableHandler.h  TableVersionChangeHandler.cpp  TableVersionChangeHandler.h
include/tsduck/interface/: ITSPacketSource.cpp
include/tsduck/io/: TSPacketStreamReader.cpp
include/tsduck/mux/: AutoChangeIdProgramMux.h  JoinedTsStream.h
private_src/: PidChanger.cpp  PidChanger.h
src/base/algo/: tsAbstractOutputStream.cpp  tsAbstractOutputStream.h  tsAlgorithm.h  tsBoolPredicate.cpp  tsBoolPredicate.h  tsFunctors.h  tsRingNode.cpp  tsRingNode.h  tsSingleDataStatistics.h  tsSingleton.h
src/base/app/: tsNamesFile.cpp  tsNamesFile.h
src/base/cpp/: tsAfterStandardHeaders.h  tsBeforeStandardHeaders.h  tsPlatform.h
src/base/report/: tsCerrReport.cpp  tsCerrReport.h  tsErrCodeReport.cpp  tsErrCodeReport.h  tsNullReport.cpp  tsNullReport.h  tsReport.cpp  (+3 more)
src/test/: test_tsduck.cpp  test_tsduck.h
(+40 files in other folders)
